--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,7 +22,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Алмазгеобур</title>
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="https://img.icons8.com/color/48/mountain.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
